package codegraph

import (
	"codebase-indexer/pkg/codegraph/resolver"
	"codebase-indexer/pkg/codegraph/types"
	"context"
	"fmt"
	"os"
	"path/filepath"
	"strings"
	"testing"

	"github.com/stretchr/testify/assert"
)

const CPPProjectRootDir = "/tmp/projects/cpp/grpc"

func TestParseCPPProjectFiles(t *testing.T) {
	env, err := setupTestEnvironment()
	assert.NoError(t, err)
	defer teardownTestEnvironment(t, env)
	testCases := []struct {
		Name    string
		Path    string
		wantErr error
	}{
		{
			Name:    "grpc",
			Path:    filepath.Join(CPPProjectRootDir, ""),
			wantErr: nil,
		},
	}
	for _, tc := range testCases {
		t.Run(tc.Name, func(t *testing.T) {
			fmt.Println("tc.Path", tc.Path)
			project := NewTestProject(tc.Path, env.logger)
			fileElements, _, err := ParseProjectFiles(context.Background(), env, project)
			err = exportFileElements(defaultExportDir, tc.Name, fileElements)
			assert.NoError(t, err)
			assert.Equal(t, tc.wantErr, err)
			assert.True(t, len(fileElements) > 0)
			for _, f := range fileElements {
				for _, e := range f.Elements {
					if !resolver.IsValidElement(e) {
						fmt.Printf("Type: %s Name: %s Path: %s\n",
							e.GetType(), e.GetName(), e.GetPath())
						fmt.Printf("  Range: %v Scope: %s\n",
							e.GetRange(), e.GetScope())
					}
					//assert.True(t, resolver.IsValidElement(e))
				}
				for _, e := range f.Imports {
					if !resolver.IsValidElement(e) {
						fmt.Printf("Type: %s Name: %s Path: %s\n",
							e.GetType(), e.GetName(), e.GetPath())
						fmt.Printf("  Range: %v Scope: %s\n",
							e.GetRange(), e.GetScope())

					}
				}
			}
		})
	}
}

func TestQueryCPP(t *testing.T) {
	// è®¾ç½®æµ‹è¯•ç¯å¢ƒ
	env, err := setupTestEnvironment()
	assert.NoError(t, err)
	defer teardownTestEnvironment(t, env)

	workspacePath := "e:\\tmp\\projects\\cpp\\grpc"
	// åˆå§‹åŒ–å·¥ä½œç©ºé—´æ•°æ®åº“è®°å½•
	err = initWorkspaceModel(env, workspacePath)
	assert.NoError(t, err)

	// åˆ›å»ºç´¢å¼•å™¨
	indexer := createTestIndexer(env, &types.VisitPattern{
		ExcludeDirs: append(defaultVisitPattern.ExcludeDirs, "vendor", ".git"),
		IncludeExts: []string{".cpp", ".cc", ".cxx", ".hpp", ".h"},
	})

	// å…ˆç´¢å¼•å·¥ä½œç©ºé—´ï¼Œç¡®ä¿æœ‰æ•°æ®å¯æŸ¥è¯¢
	fmt.Println("å¼€å§‹ç´¢å¼•CProjectRootDirå·¥ä½œç©ºé—´...")
	_, err = indexer.IndexWorkspace(context.Background(), workspacePath)
	assert.NoError(t, err)
	fmt.Println("å·¥ä½œç©ºé—´ç´¢å¼•å®Œæˆ")

	// å®šä¹‰æŸ¥è¯¢æµ‹è¯•ç”¨ä¾‹ç»“æ„
	type QueryTestCase struct {
		Name            string             // æµ‹è¯•ç”¨ä¾‹åç§°
		ElementName     string             // å…ƒç´ åç§°
		FilePath        string             // æŸ¥è¯¢çš„æ–‡ä»¶è·¯å¾„
		StartLine       int                // å¼€å§‹è¡Œå·
		EndLine         int                // ç»“æŸè¡Œå·
		ElementType     string             // å…ƒç´ ç±»å‹
		ExpectedCount   int                // æœŸæœ›çš„å®šä¹‰æ•°é‡
		ExpectedNames   []string           // æœŸæœ›æ‰¾åˆ°çš„å®šä¹‰åç§°
		ShouldFindDef   bool               // æ˜¯å¦åº”è¯¥æ‰¾åˆ°å®šä¹‰
		wantDefinitions []types.Definition // æœŸæœ›çš„è¯¦ç»†å®šä¹‰ç»“æœ
		wantErr         error              // æœŸæœ›çš„é”™è¯¯
	}

	testCases := []QueryTestCase{
		{
			Name:          "æŸ¥è¯¢grpc_channel_destroy_internalå‡½æ•°è°ƒç”¨",
			ElementName:   "grpc_channel_destroy_internal",
			FilePath:      "e:\\tmp\\projects\\cpp\\grpc\\src\\core\\lib\\surface\\channel.cc",
			StartLine:     96,
			EndLine:       96,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "grpc_channel_destroy_internal", Path: "channel.h", Range: []int32{153, 0, 153, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢grpc_channel_stack_type_is_clientå‡½æ•°è°ƒç”¨",
			ElementName:   "grpc_channel_stack_type_is_client",
			FilePath:      "e:\\tmp\\projects\\cpp\\grpc\\src\\core\\lib\\surface\\legacy_channel.cc",
			StartLine:     67,
			EndLine:       67,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "grpc_channel_stack_type_is_client", Path: "channel_stack_type.cc", Range: []int32{22, 0, 22, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢grpc_call_details_initå‡½æ•°è°ƒç”¨",
			ElementName:   "grpc_call_details_init",
			FilePath:      "e:\\tmp\\projects\\cpp\\grpc\\src\\cpp\\server\\server_cc.cc",
			StartLine:     607,
			EndLine:       607,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "grpc_call_details_init", Path: "call_details.cc", Range: []int32{26, 0, 26, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢run_in_call_combinerå‡½æ•°è°ƒç”¨",
			ElementName:   "run_in_call_combiner",
			FilePath:      "e:\\tmp\\projects\\cpp\\grpc\\src\\core\\lib\\channel\\connected_channel.cc",
			StartLine:     104,
			EndLine:       104,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "run_in_call_combiner", Path: "connected_channel.cc", Range: []int32{96, 0, 96, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢FromTopElemå‡½æ•°è°ƒç”¨",
			ElementName:   "FromTopElem",
			FilePath:      "e:\\tmp\\projects\\cpp\\grpc\\src\\core\\lib\\surface\\filter_stack_call.cc",
			StartLine:     1175,
			EndLine:       1175,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "FromTopElem", Path: "filter_stack_call.h", Range: []int32{81, 0, 81, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢grpc_metadata_array_initå‡½æ•°è°ƒç”¨",
			ElementName:   "grpc_metadata_array_init",
			FilePath:      "e:\\tmp\\projects\\cpp\\grpc\\src\\core\\load_balancing\\grpclb\\grpclb.cc",
			StartLine:     907,
			EndLine:       907,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "grpc_metadata_array_init", Path: "metadata_array.cc", Range: []int32{25, 0, 25, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢GrpcLbLoadReportRequestCreateå‡½æ•°è°ƒç”¨",
			ElementName:   "GrpcLbLoadReportRequestCreate",
			FilePath:      "e:\\tmp\\projects\\cpp\\grpc\\src\\core\\load_balancing\\grpclb\\grpclb.cc",
			StartLine:     1066,
			EndLine:       1066,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "GrpcLbLoadReportRequestCreate", Path: "load_balancer_api.cc", Range: []int32{81, 0, 81, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢ReadPolicyFromFileå‡½æ•°è°ƒç”¨",
			ElementName:   "ReadPolicyFromFile",
			FilePath:      "e:\\tmp\\projects\\cpp\\grpc\\src\\core\\lib\\security\\authorization\\grpc_authorization_policy_provider.cc",
			StartLine:     143,
			EndLine:       143,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "ReadPolicyFromFile", Path: "grpc_authorization_policy_provider.cc", Range: []int32{62, 0, 62, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢run_testå‡½æ•°è°ƒç”¨",
			ElementName:   "run_test",
			FilePath:      "e:\\tmp\\projects\\cpp\\grpc\\test\\cpp\\codegen\\golden_file_test.cc",
			StartLine:     54,
			EndLine:       55,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "run_test", Path: "golden_file_test.cc", Range: []int32{34, 0, 34, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢grpc_chttp2_transport_start_readingå‡½æ•°è°ƒç”¨",
			ElementName:   "grpc_chttp2_transport_start_reading",
			FilePath:      "e:\\tmp\\projects\\cpp\\grpc\\src\\core\\ext\\transport\\chttp2\\server\\chttp2_server.cc",
			StartLine:     249,
			EndLine:       250,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "grpc_chttp2_transport_start_reading", Path: "chttp2_transport.cc", Range: []int32{3477, 0, 3477, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢FromStaticStringæ–¹æ³•è°ƒç”¨",
			ElementName:   "FromStaticString",
			FilePath:      "e:\\tmp\\projects\\cpp\\grpc\\src\\core\\ext\\transport\\chttp2\\transport\\hpack_encoder.cc",
			StartLine:     421,
			EndLine:       421,
			ElementType:   "call.method",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "FromStaticString", Path: "chttp2_transport.cc", Range: []int32{117, 0, 120, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢StartBatchæ–¹æ³•è°ƒç”¨",
			ElementName:   "StartBatch",
			FilePath:      "e:\\tmp\\projects\\cpp\\grpc\\src\\core\\lib\\surface\\call.cc",
			StartLine:     489,
			EndLine:       489,
			ElementType:   "call.method",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "StartBatch", Path: "filter_stack_call.cc", Range: []int32{745, 0, 745, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢CancelWithErroræ–¹æ³•è°ƒç”¨",
			ElementName:   "CancelWithError",
			FilePath:      "e:\\tmp\\projects\\cpp\\grpc\\src\\core\\lib\\surface\\call.cc",
			StartLine:     421,
			EndLine:       422,
			ElementType:   "call.method",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "CancelWithError", Path: "filter_stack_call.cc", Range: []int32{332, 0, 332, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢GetInfoæ–¹æ³•è°ƒç”¨",
			ElementName:   "GetInfo",
			FilePath:      "e:\\tmp\\projects\\cpp\\grpc\\src\\core\\lib\\surface\\channel.cc",
			StartLine:     165,
			EndLine:       165,
			ElementType:   "call.method",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "GetInfo", Path: "legacy_channel.cc", Range: []int32{376, 0, 376, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢channel_initæ–¹æ³•è°ƒç”¨",
			ElementName:   "channel_init",
			FilePath:      "e:\\tmp\\projects\\cpp\\grpc\\src\\core\\lib\\surface\\init.cc",
			StartLine:     74,
			EndLine:       76,
			ElementType:   "call.method",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "channel_init", Path: "core_configuration.h", Range: []int32{76, 0, 76, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢HttpProxyMapperç±»çš„è°ƒç”¨",
			ElementName:   "HttpProxyMapper",
			FilePath:      "e:\\tmp\\projects\\cpp\\grpc\\test\\core\\handshake\\http_proxy_mapper_test.cc",
			StartLine:     209,
			EndLine:       209,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "HttpProxyMapper", Path: "http_proxy_mapper.h", Range: []int32{34, 0, 45, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢FuzzingEndpointç±»çš„è°ƒç”¨",
			ElementName:   "FuzzingEndpoint",
			FilePath:      "e:\\tmp\\projects\\cpp\\grpc\\test\\core\\event_engine\\fuzzing_event_engine\\fuzzing_event_engine.cc",
			StartLine:     684,
			EndLine:       684,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "FuzzingEndpoint", Path: "fuzzing_event_engine.h", Range: []int32{266, 0, 266, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢ScopedEnvVarç±»çš„è°ƒç”¨",
			ElementName:   "ScopedEnvVar",
			FilePath:      "e:\\tmp\\projects\\cpp\\grpc\\test\\core\\handshake\\http_proxy_mapper_test.cc",
			StartLine:     63,
			EndLine:       63,
			ElementType:   "reference",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "ScopedEnvVar", Path: "scoped_env_var.h", Range: []int32{26, 0, 26, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢ScopedExperimentalEnvVarç±»çš„è°ƒç”¨",
			ElementName:   "ScopedExperimentalEnvVar",
			FilePath:      "e:\\tmp\\projects\\cpp\\grpc\\test\\core\\xds\\file_watcher_certificate_provider_factory_test.cc",
			StartLine:     132,
			EndLine:       132,
			ElementType:   "reference",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "ScopedExperimentalEnvVar", Path: "scoped_env_var.h", Range: []int32{38, 0, 38, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢SocketUseAfterCloseDetectorç±»çš„è°ƒç”¨",
			ElementName:   "SocketUseAfterCloseDetector",
			FilePath:      "e:\\tmp\\projects\\cpp\\grpc\\test\\cpp\\naming\\cancel_ares_query_test.cc",
			StartLine:     361,
			EndLine:       362,
			ElementType:   "reference",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "SocketUseAfterCloseDetector", Path: "socket_use_after_close_detector.h", Range: []int32{41, 0, 41, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢grpc_call_credentialsç»“æ„ä½“çš„è°ƒç”¨",
			ElementName:   "grpc_call_credentials",
			FilePath:      "e:\\tmp\\projects\\cpp\\grpc\\test\\core\\test_util\\test_call_creds.cc",
			StartLine:     43,
			EndLine:       43,
			ElementType:   "reference",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "grpc_call_credentials", Path: "credentials.h", Range: []int32{36, 0, 36, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢grpc_auth_contextç»“æ„ä½“çš„è°ƒç”¨",
			ElementName:   "grpc_auth_context",
			FilePath:      "e:\\tmp\\projects\\cpp\\grpc\\include\\grpc\\grpc_security.cc",
			StartLine:     37,
			EndLine:       37,
			ElementType:   "reference",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "grpc_auth_context", Path: "credentials.h", Range: []int32{37, 0, 37, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢grpc_transport_stream_op_batchç»“æ„ä½“çš„è°ƒç”¨",
			ElementName:   "grpc_transport_stream_op_batch",
			FilePath:      "e:\\tmp\\projects\\cpp\\grpc\\src\\core\\lib\\surface\\filter_stack_call.cc",
			StartLine:     352,
			EndLine:       353,
			ElementType:   "reference",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "grpc_transport_stream_op_batch", Path: "transport.h", Range: []int32{258, 0, 258, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢grpc_transport_stream_op_batchç»“æ„ä½“çš„è°ƒç”¨",
			ElementName:   "grpc_transport_stream_op_batch",
			FilePath:      "e:\\tmp\\projects\\cpp\\grpc\\src\\core\\lib\\surface\\filter_stack_call.cc",
			StartLine:     352,
			EndLine:       353,
			ElementType:   "reference",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "grpc_transport_stream_op_batch", Path: "transport.h", Range: []int32{258, 0, 258, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢grpc_closureç»“æ„ä½“çš„è°ƒç”¨",
			ElementName:   "grpc_closure",
			FilePath:      "e:\\tmp\\projects\\cpp\\grpc\\src\\core\\lib\\transport\\transport.h",
			StartLine:     279,
			EndLine:       279,
			ElementType:   "reference",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "grpc_closure", Path: "closure.h", Range: []int32{35, 0, 35, 0}},
			},
			wantErr: nil,
		},
	}

	// ç»Ÿè®¡å˜é‡
	totalCases := len(testCases)
	correctCases := 0

	// æ‰§è¡Œæ¯ä¸ªæµ‹è¯•ç”¨ä¾‹
	for i, tc := range testCases {
		t.Run(tc.Name, func(t *testing.T) {
			fmt.Printf("\n[æµ‹è¯•ç”¨ä¾‹ %d/%d] %s\n", i+1, totalCases, tc.Name)
			fmt.Printf("å…ƒç´ åç§°: %s (ç±»å‹: %s)\n", tc.ElementName, tc.ElementType)
			fmt.Printf("æ–‡ä»¶è·¯å¾„: %s\n", tc.FilePath)
			fmt.Printf("æŸ¥è¯¢èŒƒå›´: ç¬¬%dè¡Œ - ç¬¬%dè¡Œ\n", tc.StartLine, tc.EndLine)

			// æ£€æŸ¥æ–‡ä»¶æ˜¯å¦å­˜åœ¨
			if _, err := os.Stat(tc.FilePath); os.IsNotExist(err) {
				fmt.Printf("æ–‡ä»¶ä¸å­˜åœ¨ï¼Œè·³è¿‡æŸ¥è¯¢\n")
				if !tc.ShouldFindDef {
					correctCases++
					fmt.Printf("âœ“ é¢„æœŸæ–‡ä»¶ä¸å­˜åœ¨ï¼Œæµ‹è¯•é€šè¿‡\n")
				} else {
					fmt.Printf("âœ— é¢„æœŸæ‰¾åˆ°å®šä¹‰ä½†æ–‡ä»¶ä¸å­˜åœ¨ï¼Œæµ‹è¯•å¤±è´¥\n")
				}
				return
			}

			// æ£€æŸ¥è¡Œå·èŒƒå›´æ˜¯å¦æœ‰æ•ˆ
			if tc.StartLine < 0 || tc.EndLine < 0 {
				fmt.Printf("æ— æ•ˆçš„è¡Œå·èŒƒå›´ï¼Œè·³è¿‡æŸ¥è¯¢\n")
				if !tc.ShouldFindDef {
					correctCases++
					fmt.Printf("âœ“ é¢„æœŸæ— æ•ˆèŒƒå›´ï¼Œæµ‹è¯•é€šè¿‡\n")
				} else {
					fmt.Printf("âœ— é¢„æœŸæ‰¾åˆ°å®šä¹‰ä½†èŒƒå›´æ— æ•ˆï¼Œæµ‹è¯•å¤±è´¥\n")
				}
				return
			}

			// è°ƒç”¨QueryDefinitionsæ¥å£
			definitions, err := indexer.QueryDefinitions(context.Background(), &types.QueryDefinitionOptions{
				Workspace: workspacePath,
				StartLine: tc.StartLine,
				EndLine:   tc.EndLine,
				FilePath:  tc.FilePath,
			})

			foundDefinitions := len(definitions)

			fmt.Printf("æŸ¥è¯¢ç»“æœ: ")
			if err != nil {
				fmt.Printf("æŸ¥è¯¢å¤±è´¥ - %v\n", err)
			} else {
				fmt.Printf("æ‰¾åˆ° %d ä¸ªå®šä¹‰\n", foundDefinitions)

				if foundDefinitions > 0 {
					fmt.Println("ğŸ“‹ æŸ¥è¯¢ç»“æœè¯¦æƒ…:")
					for j, def := range definitions {
						fmt.Printf("  [%d] åç§°: '%s'\n", j+1, def.Name)
						fmt.Printf("      ç±»å‹: '%s'\n", def.Type)
						fmt.Printf("      èŒƒå›´: %v\n", def.Range)
						fmt.Printf("      æ–‡ä»¶: '%s'\n", filepath.Base(def.Path))
						fmt.Printf("      å®Œæ•´è·¯å¾„: '%s'\n", def.Path)

						// å¦‚æœæœ‰æœŸæœ›çš„å®šä¹‰ï¼Œè¿›è¡ŒåŒ¹é…åº¦åˆ†æ
						if len(tc.wantDefinitions) > 0 {
							for _, wantDef := range tc.wantDefinitions {
								if def.Name != wantDef.Name {
									fmt.Printf("      âŒ åç§°ä¸åŒ¹é…: æœŸæœ› '%s' å®é™… '%s'\n", wantDef.Name, def.Name)
								}
								if def.Name == wantDef.Name {
									nameMatch := "âœ“"
									lineMatch := "âœ—"
									pathMatch := "âœ—"

									if wantDef.Range[0] == def.Range[0] {
										lineMatch = "âœ“"
									}
									if wantDef.Path == "" || strings.Contains(def.Path, wantDef.Path) {
										pathMatch = "âœ“"
									}

									fmt.Printf("      åŒ¹é…åˆ†æ: åç§°%s è¡Œå·%s è·¯å¾„%s\n", nameMatch, lineMatch, pathMatch)
								}
							}
						}
						fmt.Println("      " + strings.Repeat("-", 40))
					}
				} else {
					fmt.Println("  âŒ æœªæ‰¾åˆ°ä»»ä½•å®šä¹‰")
				}

				// è¾“å‡ºæŸ¥è¯¢æ€»ç»“
				fmt.Printf("ğŸ“Š æŸ¥è¯¢æ€»ç»“: æœŸæœ›æ‰¾åˆ°=%v, å®é™…æ‰¾åˆ°=%d\n",
					tc.ShouldFindDef, foundDefinitions)

				if tc.ShouldFindDef && foundDefinitions == 0 {
					fmt.Println("  âš ï¸  è­¦å‘Š: æœŸæœ›æ‰¾åˆ°å®šä¹‰ä½†æœªæ‰¾åˆ°")
				} else if !tc.ShouldFindDef && foundDefinitions > 0 {
					fmt.Println("  âš ï¸  è­¦å‘Š: æœŸæœ›ä¸æ‰¾åˆ°å®šä¹‰ä½†æ‰¾åˆ°äº†")
				} else {
					fmt.Println("  âœ… æŸ¥è¯¢ç»“æœç¬¦åˆé¢„æœŸ")
				}
			}

			// ä½¿ç”¨ç»“æ„åŒ–çš„æœŸæœ›ç»“æœè¿›è¡ŒéªŒè¯ï¼ˆç±»ä¼¼js_resolver_test.goæ ¼å¼ï¼‰
			if len(tc.wantDefinitions) > 0 || tc.wantErr != nil {
				// ä½¿ç”¨æ–°çš„ç»“æ„åŒ–éªŒè¯
				assert.Equal(t, tc.wantErr, err, fmt.Sprintf("%s: é”™è¯¯åº”è¯¥åŒ¹é…", tc.Name))

				if tc.wantErr == nil {
					// å½“è¿”å›å¤šä¸ªå®šä¹‰æ—¶ï¼ŒéªŒè¯æœŸæœ›çš„å®šä¹‰æ˜¯å¦éƒ½å­˜åœ¨
					for _, wantDef := range tc.wantDefinitions {
						found := false
						for _, actualDef := range definitions {
							nameMatch := actualDef.Name == wantDef.Name
							lineMatch := wantDef.Range[0] == actualDef.Range[0]
							pathMatch := wantDef.Path == "" || strings.Contains(actualDef.Path, wantDef.Path)

							if nameMatch && pathMatch && lineMatch {
								found = true
								break
							}
						}
						assert.True(t, found,
							fmt.Sprintf("%s: åº”è¯¥æ‰¾åˆ°åä¸º '%s' è¡Œå·ä¸º'%d'è·¯å¾„åŒ…å« '%s' çš„å®šä¹‰",
								tc.Name, wantDef.Name, wantDef.Range[0], wantDef.Path))
					}

				}
			} else {
				// å¯¹äºç©ºçš„wantDefinitionsï¼Œç›´æ¥åˆ¤æ–­æ­£ç¡®
				correctCases++
				fmt.Printf("âœ“ %s: wantDefinitionsä¸ºç©ºï¼Œæµ‹è¯•é€šè¿‡\n", tc.Name)
			}
		})
	}

}

func TestFindDefinitionsForAllElementsCPP(t *testing.T) {
	// è®¾ç½®æµ‹è¯•ç¯å¢ƒ
	env, err := setupTestEnvironment()
	assert.NoError(t, err)
	defer teardownTestEnvironment(t, env)

	// ä½¿ç”¨é¡¹ç›®è‡ªèº«çš„ä»£ç ä½œä¸ºæµ‹è¯•æ•°æ®
	workspacePath, err := filepath.Abs(CPPProjectRootDir) // æŒ‡å‘é¡¹ç›®æ ¹ç›®å½•
	assert.NoError(t, err)

	// åˆå§‹åŒ–å·¥ä½œç©ºé—´æ•°æ®åº“è®°å½•
	err = initWorkspaceModel(env, workspacePath)
	assert.NoError(t, err)

	// åˆ›å»ºç´¢å¼•å™¨å¹¶ç´¢å¼•å·¥ä½œç©ºé—´
	indexer := createTestIndexer(env, &types.VisitPattern{
		ExcludeDirs: append(defaultVisitPattern.ExcludeDirs, "vendor", "test", ".git"),
		IncludeExts: []string{".cpp", ".cc", ".cxx", ".hpp", ".h"}, // åªç´¢å¼•cppæ–‡ä»¶
	})

	project := NewTestProject(workspacePath, env.logger)
	fileElements, _, err := ParseProjectFiles(context.Background(), env, project)
	assert.NoError(t, err)

	// å…ˆç´¢å¼•æ‰€æœ‰æ–‡ä»¶åˆ°æ•°æ®åº“
	_, err = indexer.IndexWorkspace(context.Background(), workspacePath)
	assert.NoError(t, err)

	// ç»Ÿè®¡å˜é‡
	var (
		totalElements       = 0
		testedElements      = 0
		foundDefinitions    = 0
		notFoundDefinitions = 0
		queryErrors         = 0
		skippedElements     = 0
		skippedVariables    = 0
	)

	// å®šä¹‰éœ€è¦è·³è¿‡æµ‹è¯•çš„å…ƒç´ ç±»å‹ï¼ˆåŸºäºtypes.ElementTypeçš„å®é™…å€¼ï¼‰
	skipElementTypes := map[string]bool{
		"import":         true, // å¯¼å…¥è¯­å¥é€šå¸¸ä¸éœ€è¦æŸ¥æ‰¾å®šä¹‰
		"import.name":    true, // å¯¼å…¥åç§°
		"import.alias":   true, // å¯¼å…¥åˆ«å
		"import.path":    true, // å¯¼å…¥è·¯å¾„
		"import.source":  true, // å¯¼å…¥æº
		"package":        true, // åŒ…å£°æ˜
		"package.name":   true, // åŒ…å
		"namespace":      true, // å‘½åç©ºé—´
		"namespace.name": true, // å‘½åç©ºé—´åç§°
		"undefined":      true, // æœªå®šä¹‰ç±»å‹
	}

	// è¯¦ç»†çš„å…ƒç´ ç±»å‹ç»Ÿè®¡
	elementTypeStats := make(map[string]int)
	elementTypeSuccessStats := make(map[string]int)

	// éå†æ¯ä¸ªæ–‡ä»¶çš„å…ƒç´ 
	for _, fileElement := range fileElements {
		for _, element := range fileElement.Elements {
			elementType := string(element.GetType())
			totalElements++
			elementTypeStats[elementType]++

			// è·³è¿‡æŸäº›ç±»å‹çš„å…ƒç´ 
			if skipElementTypes[elementType] {
				skippedElements++
				continue
			}

			elementName := element.GetName()
			elementRange := element.GetRange()

			// å¦‚æœå…ƒç´ åç§°ä¸ºç©ºæˆ–è€…èŒƒå›´æ— æ•ˆï¼Œè·³è¿‡
			if elementName == "" || len(elementRange) != 4 {
				skippedElements++
				continue
			}
			if elementType == "variable" && element.GetScope() == types.ScopeFunction {
				skippedVariables++
				continue
			}
			testedElements++

			// å°è¯•æŸ¥æ‰¾è¯¥å…ƒç´ çš„å®šä¹‰
			definitions, err := indexer.QueryDefinitions(context.Background(), &types.QueryDefinitionOptions{
				Workspace: workspacePath,
				StartLine: int(elementRange[0]) + 1,
				EndLine:   int(elementRange[2]) + 1,
				FilePath:  fileElement.Path,
			})

			if err != nil {
				queryErrors++
				continue
			}

			if len(definitions) > 0 {
				foundDefinitions++
				elementTypeSuccessStats[elementType]++
			} else {
				notFoundDefinitions++
			}
		}
	}
	// è¾“å‡ºå„ç±»å‹å…ƒç´ çš„ç»Ÿè®¡ä¿¡æ¯
	fmt.Println("\nğŸ“ˆ å„ç±»å‹å…ƒç´ ç»Ÿè®¡:")
	fmt.Println(strings.Repeat("-", 60))
	for elementType, count := range elementTypeStats {
		successCount := elementTypeSuccessStats[elementType]
		rate := 0.0
		if count > 0 {
			rate = float64(successCount) / float64(count) * 100
		}
		if elementType == "variable" {
			fmt.Println("è·³è¿‡çš„å˜é‡æ•°é‡", skippedVariables)
			rate = float64(successCount) / float64(count-skippedVariables) * 100
		}
		fmt.Printf("%-15s: %4d ä¸ª (æˆåŠŸæ‰¾åˆ°å®šä¹‰: %4d, æˆåŠŸç‡: %5.1f%%)\n",
			elementType, count, successCount, rate)
	}

}
