package codegraph

import (
	"codebase-indexer/pkg/codegraph/lang"
	"codebase-indexer/pkg/codegraph/resolver"
	"codebase-indexer/pkg/codegraph/types"
	"context"
	"fmt"
	"os"
	"path/filepath"
	"strings"
	"testing"
	"time"

	"github.com/stretchr/testify/assert"
)

const GoProjectRootDir = "E:/tmp/projects/go/codebase-indexer-main"

func TestParseGoProjectFiles(t *testing.T) {
	env, err := setupTestEnvironment()
	assert.NoError(t, err)
	defer teardownTestEnvironment(t, env)
	testCases := []struct {
		Name    string
		Path    string
		wantErr error
	}{
		{
			Name:    "kubernetes",
			Path:    filepath.Join(GoProjectRootDir, "kubernetes"),
			wantErr: nil,
		},
	}
	for _, tc := range testCases {
		t.Run(tc.Name, func(t *testing.T) {
			project := NewTestProject(tc.Path, env.logger)
			fileElements, _, err := ParseProjectFiles(context.Background(), env, project)
			//err = exportFileElements(defaultExportDir, tc.Name, fileElements)
			assert.NoError(t, err)
			assert.Equal(t, tc.wantErr, err)
			assert.True(t, len(fileElements) > 0)
			for _, f := range fileElements {
				for _, e := range f.Elements {
					//fmt.Println(resolver.IsValidElement(e), e.GetName(), e.GetPath(), e.GetRange())
					if !resolver.IsValidElement(e) {
						t.Logf("error element: %s %s %v", e.GetName(), e.GetPath(), e.GetRange())
					}
				}
			}
		})
	}
}

func TestIndexGoProjects(t *testing.T) {
	env, err := setupTestEnvironment()
	assert.NoError(t, err)
	setupPprof()
	defer teardownTestEnvironment(t, env)

	// æ·»åŠ è¿™ä¸€è¡Œ - åˆå§‹åŒ–å·¥ä½œç©ºé—´æ•°æ®åº“è®°å½•
	err = initWorkspaceModel(env, filepath.Join(GoProjectRootDir, "kubernetes"))
	err = initWorkspaceModel(env, filepath.Join(GoProjectRootDir, "kubernetes"))
	assert.NoError(t, err)

	indexer := createTestIndexer(env, &types.VisitPattern{
		ExcludeDirs: defaultVisitPattern.ExcludeDirs,
		//IncludeExts: []string{".go"},
	})
	testCases := []struct {
		Name    string
		Path    string
		wantErr error
	}{
		{
			Name:    "kubernetes",
			Path:    filepath.Join(GoProjectRootDir, "kubernetes"),
			wantErr: nil,
		},
	}
	// - 1Wæ–‡ä»¶ï¼š
	//   6min 100MB ä½¿ç”¨1000ä¸ªcacheï¼Œæ²¡æœ‰åˆ™ä»ç£ç›˜è¯»å–
	//   1min45s 500MB ä½¿ç”¨500ä¸‡ä¸ªcacheï¼Œæ²¡æœ‰åˆ™ä»ç£ç›˜è¯»å–
	//   2min53s 120MB ä»…ç¼“å­˜æ‰€æœ‰åå­—(åˆå§‹åŒ–cacheä¸º1000)ï¼Œç¬¬äºŒæ¬¡è®¿é—®è¯¥å…ƒç´ æ—¶ä»ç£ç›˜åŠ è½½
	//   3min54s  150MB    åˆå§‹åŒ–ä¸º1000ï¼Œæ²¡æœ‰åˆ™ä»ç£ç›˜è¯»å–
	// - 5Wæ–‡ä»¶ï¼š
	//    200MB+ åˆå§‹åŒ–ä¸º1000ï¼Œç¼“å­˜keyå’Œvalueï¼Œæ²¡æœ‰åˆ™ä»ç£ç›˜è¯»å–
	//   1h      100MB     ä»…ç¼“å­˜åå­—ï¼Œç¬¬äºŒæ¬¡è®¿é—®ä»ç£ç›˜åŠ è½½
	for _, tc := range testCases {
		t.Run(tc.Name, func(t *testing.T) {
			_, err = indexer.IndexWorkspace(context.Background(), tc.Path)
			assert.NoError(t, err)
		})
	}
}

func TestWalkProjectCostTime(t *testing.T) {
	ctx := context.Background()
	env, err := setupTestEnvironment()
	assert.NoError(t, err)
	testCases := []struct {
		name  string
		path  string
		logic func(*testing.T, *testEnvironment, *types.WalkContext)
	}{
		{
			name: "do nothing",
			path: filepath.Join(GoProjectRootDir, "kubernetes"),
		},
		{
			name: "do index",
			path: filepath.Join(GoProjectRootDir, "kubernetes"),
			logic: func(t *testing.T, environment *testEnvironment, walkContext *types.WalkContext) {
				bytes, err := os.ReadFile(walkContext.Path)
				if err != nil {
					t.Logf("read file %s error: %v", walkContext.Path, err)
					return
				}
				_, err = environment.sourceFileParser.Parse(ctx, &types.SourceFile{
					Path:    walkContext.Path,
					Content: bytes,
				})
				if !lang.IsUnSupportedFileError(err) {
					assert.NoError(t, err)
				}
			},
		},
	}
	excludeDir := append([]string{}, defaultVisitPattern.ExcludeDirs...)
	excludeDir = append(excludeDir, "vendor")
	for _, tt := range testCases {
		t.Run(tt.name, func(t *testing.T) {
			var fileCnt int
			start := time.Now()
			err = env.workspaceReader.WalkFile(ctx, tt.path, func(walkCtx *types.WalkContext) error {
				fileCnt++
				if tt.logic != nil {
					tt.logic(t, env, walkCtx)
				}
				return nil
			}, types.WalkOptions{IgnoreError: true, VisitPattern: &types.VisitPattern{ExcludeDirs: excludeDir, IncludeExts: []string{".go"}}})
			assert.NoError(t, err)
			t.Logf("%s cost %d ms, %d files, avg %.2f ms/file", tt.name, time.Since(start).Milliseconds(), fileCnt,
				float32(time.Since(start).Milliseconds())/float32(fileCnt))
		})
	}
}

func TestQuery(t *testing.T) {
	// è®¾ç½®æµ‹è¯•ç¯å¢ƒ
	env, err := setupTestEnvironment()
	assert.NoError(t, err)
	defer teardownTestEnvironment(t, env)

	// ä½¿ç”¨codebase-indexer-mainé¡¹ç›®ä½œä¸ºæµ‹è¯•æ•°æ®
	workspacePath := "/tmp/projects/go/codebase-indexer-main"

	// åˆå§‹åŒ–å·¥ä½œç©ºé—´æ•°æ®åº“è®°å½•
	err = initWorkspaceModel(env, workspacePath)
	assert.NoError(t, err)

	// åˆ›å»ºç´¢å¼•å™¨
	indexer := createTestIndexer(env, &types.VisitPattern{
		ExcludeDirs: append(defaultVisitPattern.ExcludeDirs, "vendor", ".git"),
		IncludeExts: []string{".go"}, // åªç´¢å¼•Goæ–‡ä»¶
	})

	// å…ˆç´¢å¼•å·¥ä½œç©ºé—´ï¼Œç¡®ä¿æœ‰æ•°æ®å¯æŸ¥è¯¢
	fmt.Println("å¼€å§‹ç´¢å¼•codebase-indexer-mainå·¥ä½œç©ºé—´...")
	_, err = indexer.IndexWorkspace(context.Background(), workspacePath)
	assert.NoError(t, err)
	fmt.Println("å·¥ä½œç©ºé—´ç´¢å¼•å®Œæˆ")

	// å®šä¹‰æŸ¥è¯¢æµ‹è¯•ç”¨ä¾‹ç»“æ„
	type QueryTestCase struct {
		Name            string             // æµ‹è¯•ç”¨ä¾‹åç§°
		ElementName     string             // å…ƒç´ åç§°
		FilePath        string             // æŸ¥è¯¢çš„æ–‡ä»¶è·¯å¾„
		StartLine       int                // å¼€å§‹è¡Œå·
		EndLine         int                // ç»“æŸè¡Œå·
		ElementType     string             // å…ƒç´ ç±»å‹
		ExpectedCount   int                // æœŸæœ›çš„å®šä¹‰æ•°é‡
		ExpectedNames   []string           // æœŸæœ›æ‰¾åˆ°çš„å®šä¹‰åç§°
		ShouldFindDef   bool               // æ˜¯å¦åº”è¯¥æ‰¾åˆ°å®šä¹‰
		wantDefinitions []types.Definition // æœŸæœ›çš„è¯¦ç»†å®šä¹‰ç»“æœ
		wantErr         error              // æœŸæœ›çš„é”™è¯¯
	}

	// ä½¿ç”¨æ‚¨æä¾›çš„10ä¸ªè§£æå‡ºæ¥çš„å…ƒç´ ä½œä¸ºæµ‹è¯•ç”¨ä¾‹
	testCases := []QueryTestCase{
		{
			Name:          "æŸ¥è¯¢createTestIndexerå‡½æ•°è°ƒç”¨",
			ElementName:   "createTestIndexer",
			FilePath:      "/tmp/projects/go/codebase-indexer-main/test/codegraph/ts_test.go",
			StartLine:     65,
			EndLine:       65,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "createTestIndexer", Path: "indexer_test.go", Range: []int32{103, 0, 103, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢StripSpaceså‡½æ•°è°ƒç”¨",
			ElementName:   "StripSpaces",
			FilePath:      "/tmp/projects/go/codebase-indexer-main/pkg/codegraph/resolver/java.go",
			StartLine:     32,
			EndLine:       32,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "StripSpaces", Path: "common.go", Range: []int32{306, 0, 306, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢symbolMapKeyå‡½æ•°è°ƒç”¨",
			ElementName:   "symbolMapKey",
			FilePath:      "/tmp/projects/go/codebase-indexer-main/pkg/codegraph/indexer.go",
			StartLine:     1500,
			EndLine:       1500,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "symbolMapKey", Path: "indexer.go", Range: []int32{1504, 0, 1504, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢makeQueryPathå‡½æ•°è°ƒç”¨",
			ElementName:   "makeQueryPath",
			FilePath:      "/tmp/projects/go/codebase-indexer-main/pkg/codegraph/parser/scm.go",
			StartLine:     57,
			EndLine:       57,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "makeQueryPath", Path: "scm.go", Range: []int32{69, 0, 69, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢NewTaskPoolå‡½æ•°è°ƒç”¨",
			ElementName:   "NewTaskPool",
			FilePath:      "/tmp/projects/go/codebase-indexer-main/pkg/codegraph/pool/task_pool_test.go",
			StartLine:     18,
			EndLine:       18,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "NewTaskPool", Path: "task_pool.go", Range: []int32{28, 0, 28, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢parseBaseClassClauseå‡½æ•°è°ƒç”¨",
			ElementName:   "parseBaseClassClause",
			FilePath:      "/tmp/projects/go/codebase-indexer-main/pkg/codegraph/resolver/cpp.go",
			StartLine:     133,
			EndLine:       133,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "parseBaseClassClause", Path: "cpp.go", Range: []int32{349, 0, 349, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢NewReferenceå‡½æ•°è°ƒç”¨",
			ElementName:   "NewReference",
			FilePath:      "/tmp/projects/go/codebase-indexer-main/pkg/codegraph/resolver/go.go",
			StartLine:     241,
			EndLine:       241,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "NewReference", Path: "common.go", Range: []int32{149, 0, 149, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢findAllTypeIdentifierså‡½æ•°è°ƒç”¨",
			ElementName:   "findAllTypeIdentifiers",
			FilePath:      "/tmp/projects/go/codebase-indexer-main/pkg/codegraph/resolver/cpp.go",
			StartLine:     225,
			EndLine:       225,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "findAllTypeIdentifiers", Path: "common.go", Range: []int32{239, 0, 239, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢CreateTestValueså‡½æ•°è°ƒç”¨",
			ElementName:   "CreateTestValues",
			FilePath:      "/tmp/projects/go/codebase-indexer-main/pkg/codegraph/store/leveldb_test.go",
			StartLine:     408,
			EndLine:       408,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "CreateTestValues", Path: "test_utils.go", Range: []int32{69, 0, 69, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢containsModifierå‡½æ•°è°ƒç”¨",
			ElementName:   "containsModifier",
			FilePath:      "/tmp/projects/go/codebase-indexer-main/pkg/codegraph/resolver/javascript.go",
			StartLine:     301,
			EndLine:       301,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "containsModifier", Path: "javascript.go", Range: []int32{313, 0, 313, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢NewModuleResolverå‡½æ•°è°ƒç”¨",
			ElementName:   "NewModuleResolver",
			FilePath:      "/tmp/projects/go/codebase-indexer-main/pkg/codegraph/workspace/workspace.go",
			StartLine:     41,
			EndLine:       41,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "NewModuleResolver", Path: "module_resolver.go", Range: []int32{34, 0, 34, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢Definitionç»“æ„ä½“",
			ElementName:   "Definition",
			FilePath:      "/tmp/projects/go/codebase-indexer-main/pkg/codegraph/types/index.go",
			StartLine:     21,
			EndLine:       21,
			ElementType:   "reference",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "Definition", Path: "index.go", Range: []int32{24, 0, 24, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢QueryRelationOptionsç»“æ„ä½“",
			ElementName:   "QueryRelationOptions",
			FilePath:      "/tmp/projects/go/codebase-indexer-main/pkg/codegraph/types/indexer.go",
			StartLine:     853,
			EndLine:       853,
			ElementType:   "reference",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "QueryRelationOptions", Path: "index.go", Range: []int32{40, 0, 40, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢SourceFileç»“æ„ä½“",
			ElementName:   "SourceFile",
			FilePath:      "/tmp/projects/go/codebase-indexer-main/pkg/codegraph/indexer.go",
			StartLine:     1469,
			EndLine:       1469,
			ElementType:   "reference",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "SourceFile", Path: "element.go", Range: []int32{258, 0, 258, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢GraphNodeç»“æ„ä½“",
			ElementName:   "GraphNode",
			FilePath:      "/tmp/projects/go/codebase-indexer-main/pkg/codegraph/types/indexer.go",
			StartLine:     60,
			EndLine:       60,
			ElementType:   "reference",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "GraphNode", Path: "indexer.go", Range: []int32{40, 0, 40, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢loggerç»“æ„ä½“",
			ElementName:   "logger",
			FilePath:      "/tmp/projects/go/codebase-indexer-main/pkg/codegraph/types/indexer.go",
			StartLine:     59,
			EndLine:       59,
			ElementType:   "reference",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "logger", Path: "logger.go", Range: []int32{258, 0, 258, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢CodeGraphSummaryç»“æ„ä½“",
			ElementName:   "CodeGraphSummary",
			FilePath:      "/tmp/projects/go/codebase-indexer-main/pkg/codegraph/types/indexer.go",
			StartLine:     1274,
			EndLine:       1274,
			ElementType:   "reference",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "CodeGraphSummary", Path: "index.go", Range: []int32{62, 0, 62, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢VersionRequestç»“æ„ä½“",
			ElementName:   "VersionRequest",
			FilePath:      "/tmp/projects/go/codebase-indexer-main/api/codegraph/codebase_syncer.pb.go",
			StartLine:     454,
			EndLine:       454,
			ElementType:   "reference",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "VersionRequest", Path: "codebase_syncer.pb.go", Range: []int32{445, 0, 445, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢ConfigServerç»“æ„ä½“",
			ElementName:   "ConfigServer",
			FilePath:      "/tmp/projects/go/codebase-indexer-main/internal/config/config.go",
			StartLine:     43,
			EndLine:       43,
			ElementType:   "reference",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "ConfigServer", Path: "config.go", Range: []int32{11, 0, 11, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢DefinitionDatagç»“æ„ä½“",
			ElementName:   "DefinitionData",
			FilePath:      "/tmp/projects/go/codebase-indexer-main/internal/service/codebase.go",
			StartLine:     418,
			EndLine:       418,
			ElementType:   "reference",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "DefinitionData", Path: "backend.go", Range: []int32{82, 0, 82, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢JavaClassifierç»“æ„ä½“",
			ElementName:   "JavaClassifier",
			FilePath:      "/tmp/projects/go/codebase-indexer-main/pkg/codegraph/analyzer/package_classifier/java_classifier.go",
			StartLine:     15,
			EndLine:       15,
			ElementType:   "reference",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "JavaClassifier", Path: "java_classifier.go", Range: []int32{8, 0, 8, 0}},
			},
			wantErr: nil,
		},
	}

	// ç»Ÿè®¡å˜é‡
	totalCases := len(testCases)
	correctCases := 0

	fmt.Printf("\nå¼€å§‹æ‰§è¡Œ %d ä¸ªåŸºäºäººå·¥ç´¢å¼•å…ƒç´ çš„æŸ¥è¯¢æµ‹è¯•ç”¨ä¾‹...\n", totalCases)
	fmt.Println(strings.Repeat("=", 80))

	// æ‰§è¡Œæ¯ä¸ªæµ‹è¯•ç”¨ä¾‹
	for i, tc := range testCases {
		t.Run(tc.Name, func(t *testing.T) {
			fmt.Printf("\n[æµ‹è¯•ç”¨ä¾‹ %d/%d] %s\n", i+1, totalCases, tc.Name)
			fmt.Printf("å…ƒç´ åç§°: %s (ç±»å‹: %s)\n", tc.ElementName, tc.ElementType)
			fmt.Printf("æ–‡ä»¶è·¯å¾„: %s\n", tc.FilePath)
			fmt.Printf("æŸ¥è¯¢èŒƒå›´: ç¬¬%dè¡Œ - ç¬¬%dè¡Œ\n", tc.StartLine, tc.EndLine)

			// æ£€æŸ¥æ–‡ä»¶æ˜¯å¦å­˜åœ¨
			if _, err := os.Stat(tc.FilePath); os.IsNotExist(err) {
				fmt.Printf("æ–‡ä»¶ä¸å­˜åœ¨ï¼Œè·³è¿‡æŸ¥è¯¢\n")
				if !tc.ShouldFindDef {
					correctCases++
					fmt.Printf("âœ“ é¢„æœŸæ–‡ä»¶ä¸å­˜åœ¨ï¼Œæµ‹è¯•é€šè¿‡\n")
				} else {
					fmt.Printf("âœ— é¢„æœŸæ‰¾åˆ°å®šä¹‰ä½†æ–‡ä»¶ä¸å­˜åœ¨ï¼Œæµ‹è¯•å¤±è´¥\n")
				}
				return
			}

			// æ£€æŸ¥è¡Œå·èŒƒå›´æ˜¯å¦æœ‰æ•ˆ
			if tc.StartLine < 0 || tc.EndLine < 0 {
				fmt.Printf("æ— æ•ˆçš„è¡Œå·èŒƒå›´ï¼Œè·³è¿‡æŸ¥è¯¢\n")
				if !tc.ShouldFindDef {
					correctCases++
					fmt.Printf("âœ“ é¢„æœŸæ— æ•ˆèŒƒå›´ï¼Œæµ‹è¯•é€šè¿‡\n")
				} else {
					fmt.Printf("âœ— é¢„æœŸæ‰¾åˆ°å®šä¹‰ä½†èŒƒå›´æ— æ•ˆï¼Œæµ‹è¯•å¤±è´¥\n")
				}
				return
			}

			// è°ƒç”¨QueryDefinitionsæ¥å£
			definitions, err := indexer.QueryDefinitions(context.Background(), &types.QueryDefinitionOptions{
				Workspace: workspacePath,
				StartLine: tc.StartLine + 1,
				EndLine:   tc.EndLine + 1,
				FilePath:  tc.FilePath,
			})

			foundDefinitions := len(definitions)

			fmt.Printf("æŸ¥è¯¢ç»“æœ: ")
			if err != nil {
				fmt.Printf("æŸ¥è¯¢å¤±è´¥ - %v\n", err)
			} else {
				fmt.Printf("æ‰¾åˆ° %d ä¸ªå®šä¹‰\n", foundDefinitions)

				// æ‰“å°æ‰¾åˆ°çš„å®šä¹‰è¯¦æƒ…
				for j, def := range definitions {
					fmt.Printf("  å®šä¹‰%d: åç§°='%s', ç±»å‹='%s', èŒƒå›´=%v, æ–‡ä»¶='%s'\n",
						j+1, def.Name, def.Type, def.Range, filepath.Base(def.Path))
				}
			}

			// ä½¿ç”¨ç»“æ„åŒ–çš„æœŸæœ›ç»“æœè¿›è¡ŒéªŒè¯ï¼ˆç±»ä¼¼js_resolver_test.goæ ¼å¼ï¼‰
			if len(tc.wantDefinitions) > 0 || tc.wantErr != nil {
				// ä½¿ç”¨æ–°çš„ç»“æ„åŒ–éªŒè¯
				assert.Equal(t, tc.wantErr, err, fmt.Sprintf("%s: é”™è¯¯åº”è¯¥åŒ¹é…", tc.Name))

				if tc.wantErr == nil {
					// å½“è¿”å›å¤šä¸ªå®šä¹‰æ—¶ï¼ŒéªŒè¯æœŸæœ›çš„å®šä¹‰æ˜¯å¦éƒ½å­˜åœ¨
					for _, wantDef := range tc.wantDefinitions {
						found := false
						for _, actualDef := range definitions {
							nameMatch := actualDef.Name == wantDef.Name
							lineMatch := wantDef.Range[0] == actualDef.Range[0]
							pathMatch := wantDef.Path == "" || strings.Contains(actualDef.Path, wantDef.Path)

							if nameMatch && pathMatch && lineMatch {
								found = true
								break
							}
						}
						assert.True(t, found,
							fmt.Sprintf("%s: åº”è¯¥æ‰¾åˆ°åä¸º '%s' è¡Œå·ä¸º'%d'è·¯å¾„åŒ…å« '%s' çš„å®šä¹‰",
								tc.Name, wantDef.Name, wantDef.Range[0], wantDef.Path))
					}

				}
			} else {
				// ä½¿ç”¨åŸæœ‰çš„éªŒè¯é€»è¾‘ï¼Œä¿æŒå‘åå…¼å®¹
				if tc.ShouldFindDef {
					assert.NoError(t, err, fmt.Sprintf("%s æŸ¥è¯¢åº”è¯¥æˆåŠŸ", tc.Name))
					assert.GreaterOrEqual(t, foundDefinitions, tc.ExpectedCount,
						fmt.Sprintf("%s æ‰¾åˆ°çš„å®šä¹‰æ•°é‡åº”è¯¥å¤§äºç­‰äº %d", tc.Name, tc.ExpectedCount))
				} else {
					if err == nil {
						assert.Equal(t, 0, len(definitions),
							fmt.Sprintf("%s ä¸åº”è¯¥æ‰¾åˆ°å®šä¹‰", tc.Name))
					}
				}
			}
		})
	}

}

func TestFindDefinitionsForAllElementsGo(t *testing.T) {
	// è®¾ç½®æµ‹è¯•ç¯å¢ƒ
	env, err := setupTestEnvironment()
	assert.NoError(t, err)
	defer teardownTestEnvironment(t, env)

	// ä½¿ç”¨é¡¹ç›®è‡ªèº«çš„ä»£ç ä½œä¸ºæµ‹è¯•æ•°æ®
	workspacePath, err := filepath.Abs(GoProjectRootDir) // æŒ‡å‘é¡¹ç›®æ ¹ç›®å½•
	assert.NoError(t, err)

	// åˆå§‹åŒ–å·¥ä½œç©ºé—´æ•°æ®åº“è®°å½•
	err = initWorkspaceModel(env, workspacePath)
	assert.NoError(t, err)

	// åˆ›å»ºç´¢å¼•å™¨å¹¶ç´¢å¼•å·¥ä½œç©ºé—´
	indexer := createTestIndexer(env, &types.VisitPattern{
		ExcludeDirs: append(defaultVisitPattern.ExcludeDirs, "vendor", "test", ".git"),
		IncludeExts: []string{".go"},
	})

	project := NewTestProject(workspacePath, env.logger)
	fileElements, _, err := ParseProjectFiles(context.Background(), env, project)
	assert.NoError(t, err)

	// å…ˆç´¢å¼•æ‰€æœ‰æ–‡ä»¶åˆ°æ•°æ®åº“
	_, err = indexer.IndexWorkspace(context.Background(), workspacePath)
	assert.NoError(t, err)

	// ç»Ÿè®¡å˜é‡
	var (
		totalElements       = 0
		testedElements      = 0
		foundDefinitions    = 0
		notFoundDefinitions = 0
		queryErrors         = 0
		skippedElements     = 0
		skippedVariables    = 0
	)

	// å®šä¹‰éœ€è¦è·³è¿‡æµ‹è¯•çš„å…ƒç´ ç±»å‹ï¼ˆåŸºäºtypes.ElementTypeçš„å®é™…å€¼ï¼‰
	skipElementTypes := map[string]bool{
		"import":         true, // å¯¼å…¥è¯­å¥é€šå¸¸ä¸éœ€è¦æŸ¥æ‰¾å®šä¹‰
		"import.name":    true, // å¯¼å…¥åç§°
		"import.alias":   true, // å¯¼å…¥åˆ«å
		"import.path":    true, // å¯¼å…¥è·¯å¾„
		"import.source":  true, // å¯¼å…¥æº
		"package":        true, // åŒ…å£°æ˜
		"package.name":   true, // åŒ…å
		"namespace":      true, // å‘½åç©ºé—´
		"namespace.name": true, // å‘½åç©ºé—´åç§°
		"undefined":      true, // æœªå®šä¹‰ç±»å‹
	}

	// è¯¦ç»†çš„å…ƒç´ ç±»å‹ç»Ÿè®¡
	elementTypeStats := make(map[string]int)
	elementTypeSuccessStats := make(map[string]int)

	// éå†æ¯ä¸ªæ–‡ä»¶çš„å…ƒç´ 
	for _, fileElement := range fileElements {
		for _, element := range fileElement.Elements {
			elementType := string(element.GetType())
			totalElements++
			elementTypeStats[elementType]++

			// è·³è¿‡æŸäº›ç±»å‹çš„å…ƒç´ 
			if skipElementTypes[elementType] {
				skippedElements++
				continue
			}

			elementName := element.GetName()
			elementRange := element.GetRange()

			// å¦‚æœå…ƒç´ åç§°ä¸ºç©ºæˆ–è€…èŒƒå›´æ— æ•ˆï¼Œè·³è¿‡
			if elementName == "" || len(elementRange) != 4 {
				skippedElements++
				continue
			}
			if elementType == "variable" && element.GetScope() == types.ScopeFunction {
				skippedVariables++
				continue
			}
			testedElements++

			// å°è¯•æŸ¥æ‰¾è¯¥å…ƒç´ çš„å®šä¹‰
			definitions, err := indexer.QueryDefinitions(context.Background(), &types.QueryDefinitionOptions{
				Workspace: workspacePath,
				StartLine: int(elementRange[0]) + 1,
				EndLine:   int(elementRange[2]) + 1,
				FilePath:  fileElement.Path,
			})

			if err != nil {
				queryErrors++
				continue
			}

			if len(definitions) > 0 {
				foundDefinitions++
				elementTypeSuccessStats[elementType]++
			} else {
				notFoundDefinitions++
			}
		}
	}

	// è¾“å‡ºå„ç±»å‹å…ƒç´ çš„ç»Ÿè®¡ä¿¡æ¯
	fmt.Println("\nğŸ“ˆ å„ç±»å‹å…ƒç´ ç»Ÿè®¡:")
	fmt.Println(strings.Repeat("-", 60))
	for elementType, count := range elementTypeStats {
		successCount := elementTypeSuccessStats[elementType]
		rate := 0.0
		if count > 0 {
			rate = float64(successCount) / float64(count) * 100
		}
		if elementType == "variable" {
			fmt.Println("è·³è¿‡çš„å˜é‡æ•°é‡", skippedVariables)
			rate = float64(successCount) / float64(count-skippedVariables) * 100
		}
		fmt.Printf("%-15s: %4d ä¸ª (æˆåŠŸæ‰¾åˆ°å®šä¹‰: %4d, æˆåŠŸç‡: %5.1f%%)\n",
			elementType, count, successCount, rate)
	}
}
