package codegraph

import (
	"codebase-indexer/pkg/codegraph/proto/codegraphpb"
	"codebase-indexer/pkg/codegraph/resolver"
	"codebase-indexer/pkg/codegraph/store"
	"codebase-indexer/pkg/codegraph/types"
	"context"
	"fmt"
	"os"
	"path/filepath"
	"strings"
	"testing"
	"time"

	"github.com/stretchr/testify/assert"
	"google.golang.org/protobuf/proto"
)

const PythonProjectRootDir = "/tmp/projects/python/fastapi"

func TestParsePythonProjectFiles(t *testing.T) {
	env, err := setupTestEnvironment()
	assert.NoError(t, err)
	defer teardownTestEnvironment(t, env)
	testCases := []struct {
		Name    string
		Path    string
		wantErr error
	}{
		{
			Name:    "fastapi",
			Path:    filepath.Join(PythonProjectRootDir),
			wantErr: nil,
		},
	}
	for _, tc := range testCases {
		t.Run(tc.Name, func(t *testing.T) {
			start := time.Now()
			project := NewTestProject(tc.Path, env.logger)
			fileElements, _, err := ParseProjectFiles(context.Background(), env, project)
			err = exportFileElements(defaultExportDir, tc.Name, fileElements)
			duration := time.Since(start)
			fmt.Printf("æµ‹è¯•ç”¨ä¾‹ '%s' æ‰§è¡Œæ—¶é—´: %v, æ–‡ä»¶ä¸ªæ•°: %d\n", tc.Name, duration, len(fileElements))
			assert.NoError(t, err)
			assert.Equal(t, tc.wantErr, err)
			assert.True(t, len(fileElements) > 0)
			for _, f := range fileElements {
				for _, e := range f.Elements {
					if !resolver.IsValidElement(e) {
						fmt.Printf("Type: %s Name: %s Path: %s\n",
							e.GetType(), e.GetName(), e.GetPath())
						fmt.Printf("  Range: %v Scope: %s\n",
							e.GetRange(), e.GetScope())

					}
					//assert.True(t, resolver.IsValidElement(e))
				}
				for _, e := range f.Imports {
					if !resolver.IsValidElement(e) {
						fmt.Printf("Type: %s Name: %s Path: %s\n",
							e.GetType(), e.GetName(), e.GetPath())
						fmt.Printf("  Range: %v Scope: %s\n",
							e.GetRange(), e.GetScope())
					}
				}
			}
			fmt.Println("-------------------------------------------------")
		})
	}
}

func TestQueryPython(t *testing.T) {
	// è®¾ç½®æµ‹è¯•ç¯å¢ƒ
	// è®¾ç½®æµ‹è¯•ç¯å¢ƒ
	env, err := setupTestEnvironment()
	if err != nil {
		t.Logf("setupTestEnvironment error: %v", err)
		return
	}
	defer teardownTestEnvironment(t, env)

	// ä½¿ç”¨codebase-indexer-mainé¡¹ç›®ä½œä¸ºæµ‹è¯•æ•°æ®
	workspacePath := "e:\\tmp\\projects\\python\\fastapi"

	if err = initWorkspaceModel(env, workspacePath); err != nil {
		t.Logf("initWorkspaceModel error: %v", err)
		return
	}

	// åˆ›å»ºç´¢å¼•å™¨
	indexer := createTestIndexer(env, &types.VisitPattern{
		ExcludeDirs: append(defaultVisitPattern.ExcludeDirs, "vendor", ".git"),
		IncludeExts: []string{".py"},
	})

	// å…ˆæ¸…é™¤æ‰€æœ‰å·²æœ‰çš„ç´¢å¼•ï¼Œç¡®ä¿å¼ºåˆ¶é‡æ–°ç´¢å¼•
	if err = indexer.RemoveAllIndexes(context.Background(), workspacePath); err != nil {
		t.Logf("remove indexes error: %v", err)
		return
	}

	// å…ˆç´¢å¼•å·¥ä½œç©ºé—´ï¼Œç¡®ä¿æœ‰æ•°æ®å¯æŸ¥è¯¢
	if _, err = indexer.IndexWorkspace(context.Background(), workspacePath); err != nil {
		t.Logf("index workspace error: %v", err)
		return
	}

	// å®šä¹‰æŸ¥è¯¢æµ‹è¯•ç”¨ä¾‹ç»“æ„
	type QueryTestCase struct {
		Name            string             // æµ‹è¯•ç”¨ä¾‹åç§°
		ElementName     string             // å…ƒç´ åç§°
		FilePath        string             // æŸ¥è¯¢çš„æ–‡ä»¶è·¯å¾„
		StartLine       int                // å¼€å§‹è¡Œå·
		EndLine         int                // ç»“æŸè¡Œå·
		ElementType     string             // å…ƒç´ ç±»å‹
		ExpectedCount   int                // æœŸæœ›çš„å®šä¹‰æ•°é‡
		ExpectedNames   []string           // æœŸæœ›æ‰¾åˆ°çš„å®šä¹‰åç§°
		ShouldFindDef   bool               // æ˜¯å¦åº”è¯¥æ‰¾åˆ°å®šä¹‰
		wantDefinitions []types.Definition // æœŸæœ›çš„è¯¦ç»†å®šä¹‰ç»“æœ
		wantErr         error              // æœŸæœ›çš„é”™è¯¯
	}

	// ä½¿ç”¨æ‚¨æä¾›çš„10ä¸ªè§£æå‡ºæ¥çš„å…ƒç´ ä½œä¸ºæµ‹è¯•ç”¨ä¾‹
	testCases := []QueryTestCase{
		{
			Name:          "æŸ¥è¯¢get_websocket_appå‡½æ•°è°ƒç”¨",
			ElementName:   "get_websocket_app",
			FilePath:      "e:\\tmp\\projects\\python\\fastapi\\fastapi\\routing.py",
			StartLine:     415,
			EndLine:       419,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "get_websocket_app", Path: "routing.py", Range: []int32{360, 0, 385, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢get_authorization_scheme_paramå‡½æ•°è°ƒç”¨",
			ElementName:   "get_authorization_scheme_param",
			FilePath:      "e:\\tmp\\projects\\python\\fastapi\\fastapi\\security\\oauth2.py",
			StartLine:     490,
			EndLine:       490,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "get_authorization_scheme_param", Path: "utils.py", Range: []int32{3, 0, 9, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢_get_flat_fields_from_paramså‡½æ•°è°ƒç”¨",
			ElementName:   "_get_flat_fields_from_params",
			FilePath:      "e:\\tmp\\projects\\python\\fastapi\\fastapi\\openapi\\utils.py",
			StartLine:     107,
			EndLine:       107,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "_get_flat_fields_from_params", Path: "utils.py", Range: []int32{211, 0, 211, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢add_taskå‡½æ•°è°ƒç”¨",
			ElementName:   "add_task",
			FilePath:      "e:\\tmp\\projects\\python\\fastapi\\fastapi\\background.py",
			StartLine:     59,
			EndLine:       59,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "add_task", Path: "background.py", Range: []int32{8, 0, 8, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢get_lang_pathså‡½æ•°è°ƒç”¨",
			ElementName:   "get_lang_paths",
			FilePath:      "e:\\tmp\\projects\\python\\fastapi\\scripts\\docs.py",
			StartLine:     71,
			EndLine:       71,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "get_lang_paths", Path: "docs.py", Range: []int32{57, 0, 57, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢get_graphql_translation_discussionså‡½æ•°è°ƒç”¨",
			ElementName:   "get_graphql_translation_discussions",
			FilePath:      "e:\\tmp\\projects\\python\\fastapi\\scripts\\notify_translations.py",
			StartLine:     350,
			EndLine:       350,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "get_graphql_translation_discussions", Path: "notify_translations.py", Range: []int32{238, 0, 238, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢include_routeræ–¹æ³•è°ƒç”¨",
			ElementName:   "include_router",
			FilePath:      "e:\\tmp\\projects\\python\\fastapi\\docs_src\\bigger_applications\\app\\main.py",
			StartLine:     12,
			EndLine:       18,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "include_router", Path: "applications.py", Range: []int32{1254, 0, 1254, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢Cookieæ–¹æ³•è°ƒç”¨",
			ElementName:   "Cookie",
			FilePath:      "e:\\tmp\\projects\\python\\fastapi\\docs_src\\websockets\\tutorial002_an.py",
			StartLine:     69,
			EndLine:       69,
			ElementType:   "call.function",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "Cookie", Path: "param_functions.py", Range: []int32{958, 0, 958, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢startswithæ–¹æ³•è°ƒç”¨",
			ElementName:   "startswith",
			FilePath:      "e:\\tmp\\projects\\python\\fastapi\\scripts\\notify_translations.py",
			StartLine:     342,
			EndLine:       342,
			ElementType:   "call.function",
			ShouldFindDef: false,
			wantErr:       nil,
		},
		{
			Name:          "æŸ¥è¯¢mkdiræ–¹æ³•è°ƒç”¨",
			ElementName:   "mkdir",
			FilePath:      "e:\\tmp\\projects\\python\\fastapi\\scripts\\translate.py",
			StartLine:     105,
			EndLine:       105,
			ElementType:   "call.function",
			ShouldFindDef: false,
			wantErr:       nil,
		},
		{
			Name:          "æŸ¥è¯¢Itemå¼•ç”¨",
			ElementName:   "Item",
			FilePath:      "e:\\tmp\\projects\\python\\fastapi\\docs_src\\body_multiple_params\\tutorial001_an_py310.py",
			StartLine:     105,
			EndLine:       105,
			ElementType:   "reference",
			ShouldFindDef: false,
			wantErr:       nil,
		},
		{
			Name:          "æŸ¥è¯¢Settingså¼•ç”¨",
			ElementName:   "Settings",
			FilePath:      "e:\\tmp\\projects\\python\\fastapi\\docs_src\\conditional_openapi\\tutorial001.py",
			StartLine:     9,
			EndLine:       9,
			ElementType:   "reference",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "Settings", Path: "tutorial001.py", Range: []int32{4, 0, 4, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢GzipRequestå¼•ç”¨",
			ElementName:   "GzipRequest",
			FilePath:      "e:\\tmp\\projects\\python\\fastapi\\docs_src\\custom_request_and_route\\tutorial001.py",
			StartLine:     23,
			EndLine:       23,
			ElementType:   "reference",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "GzipRequest", Path: "tutorial001.py", Range: []int32{7, 0, 7, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢Annotatedå¼•ç”¨",
			ElementName:   "Annotated",
			FilePath:      "e:\\tmp\\projects\\python\\fastapi\\docs_src\\body_multiple_params\\tutorial004_an_py39.py",
			StartLine:     26,
			EndLine:       26,
			ElementType:   "reference",
			ShouldFindDef: false,
			wantErr:       nil,
		},
		{
			Name:          "æŸ¥è¯¢SecurityRequirementå¼•ç”¨",
			ElementName:   "SecurityRequirement",
			FilePath:      "e:\\tmp\\projects\\python\\fastapi\\fastapi\\dependencies\\utils.py",
			StartLine:     159,
			EndLine:       161,
			ElementType:   "reference",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "SecurityRequirement", Path: "models.py", Range: []int32{8, 0, 8, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢LinkDataå¼•ç”¨",
			ElementName:   "LinkData",
			FilePath:      "e:\\tmp\\projects\\python\\fastapi\\scripts\\deploy_docs_status.py",
			StartLine:     93,
			EndLine:       93,
			ElementType:   "reference",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "LinkData", Path: "deploy_docs_status.py", Range: []int32{17, 0, 17, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢FastAPIå¼•ç”¨",
			ElementName:   "FastAPI",
			FilePath:      "e:\\tmp\\projects\\python\\fastapi\\docs_src\\websockets\\tutorial002_an_py39.py",
			StartLine:     14,
			EndLine:       14,
			ElementType:   "reference",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "FastAPI", Path: "applications.py", Range: []int32{47, 0, 47, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢TypeVarå¼•ç”¨",
			ElementName:   "TypeVar",
			FilePath:      "e:\\tmp\\projects\\python\\fastapi\\fastapi\\concurrency.py",
			StartLine:     12,
			EndLine:       12,
			ElementType:   "reference",
			ShouldFindDef: false,
			wantErr:       nil,
		},
		{
			Name:          "æŸ¥è¯¢Authorå¼•ç”¨",
			ElementName:   "Author",
			FilePath:      "e:\\tmp\\projects\\python\\fastapi\\scripts\\contributors.py",
			StartLine:     74,
			EndLine:       74,
			ElementType:   "reference",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "Author", Path: "contributors.py", Range: []int32{58, 0, 58, 0}},
			},
			wantErr: nil,
		},
		{
			Name:          "æŸ¥è¯¢APIRouterå¼•ç”¨",
			ElementName:   "APIRouter",
			FilePath:      "e:\\tmp\\projects\\python\\fastapi\\tests\\test_custom_middleware_exception.py",
			StartLine:     10,
			EndLine:       10,
			ElementType:   "reference",
			ShouldFindDef: true,
			wantDefinitions: []types.Definition{
				{Name: "APIRouter", Path: "routing.py", Range: []int32{595, 0, 595, 0}},
			},
			wantErr: nil,
		},
	}
	// ç»Ÿè®¡å˜é‡
	totalCases := len(testCases)
	correctCases := 0

	// æ‰§è¡Œæ¯ä¸ªæµ‹è¯•ç”¨ä¾‹
	for i, tc := range testCases {
		tc := tc // æ•è·å¾ªç¯å˜é‡
		t.Run(tc.Name, func(t *testing.T) {
			t.Logf("test case %d/%d: %s", i+1, totalCases, tc.Name)
			// æ£€æŸ¥æ–‡ä»¶æ˜¯å¦å­˜åœ¨
			if _, err := os.Stat(tc.FilePath); os.IsNotExist(err) {
				t.Logf("file not exist: %s", tc.FilePath)
				return
			}

			// æ£€æŸ¥è¡Œå·èŒƒå›´æ˜¯å¦æœ‰æ•ˆ
			if tc.StartLine < 0 || tc.EndLine < 0 {
				t.Logf("invalid line range: %d-%d", tc.StartLine, tc.EndLine)
				if !tc.ShouldFindDef {
					correctCases++
					t.Logf("expect invalid range, test pass")
				} else {
					t.Logf("expect find definition but range is invalid, test fail")
				}
				return
			}

			// è°ƒç”¨QueryDefinitionsæ¥å£
			definitions, err := indexer.QueryDefinitions(context.Background(), &types.QueryDefinitionOptions{
				Workspace: workspacePath,
				StartLine: tc.StartLine,
				EndLine:   tc.EndLine,
				FilePath:  tc.FilePath,
			})

			foundDefinitions := len(definitions)

			if err != nil {
				t.Logf("query failed: %v", err)
			} else {
				t.Logf("found %d definitions", foundDefinitions)

				if foundDefinitions > 0 {
					t.Logf("query result detail:")
					for j, def := range definitions {
						t.Logf(
							"  [%d] name: '%s' type: '%s' range: %v path: '%s' fullPath: '%s'", j+1, def.Name, def.Type, def.Range, def.Path, filepath.Dir(def.Path))

						// å¦‚æœæœ‰æœŸæœ›çš„å®šä¹‰ï¼Œè¿›è¡ŒåŒ¹é…åº¦åˆ†æ
						if len(tc.wantDefinitions) > 0 {
							for _, wantDef := range tc.wantDefinitions {
								if def.Name != wantDef.Name {
									t.Logf("name not match: expect '%s' actual '%s'", wantDef.Name, def.Name)
								}
								if def.Name == wantDef.Name {
									nameMatch := "âœ“"
									lineMatch := "âœ—"
									pathMatch := "âœ—"

									if wantDef.Range[0] == def.Range[0] {
										lineMatch = "âœ“"
									}
									if wantDef.Path == "" || strings.Contains(def.Path, wantDef.Path) {
										pathMatch = "âœ“"
									}

									t.Logf("match analysis: name %s line %s path %s", nameMatch, lineMatch, pathMatch)
								}
							}
						}
					}
				} else {
					t.Logf("no definition found")
				}

				// è¾“å‡ºæŸ¥è¯¢æ€»ç»“
				t.Logf("query summary: expect find=%v, actual find=%d",
					tc.ShouldFindDef, foundDefinitions)

			}

			// è®¡ç®—å½“å‰ç”¨ä¾‹æ˜¯å¦æ­£ç¡®
			caseCorrect := false
			if tc.wantErr != nil {
				caseCorrect = err != nil
				if !caseCorrect {
					t.Logf("expect error %v but got nil", tc.wantErr)
				}
			} else if len(tc.wantDefinitions) > 0 {
				if err != nil {
					t.Logf("unexpected error: %v", err)
					caseCorrect = false
				} else {
					allFound := true
					for _, wantDef := range tc.wantDefinitions {
						found := false
						for _, actualDef := range definitions {
							nameMatch := actualDef.Name == wantDef.Name
							lineMatch := wantDef.Range[0] == actualDef.Range[0]
							pathMatch := wantDef.Path == "" || strings.Contains(actualDef.Path, wantDef.Path)

							if nameMatch && pathMatch && lineMatch {
								found = true
								break
							}
						}
						if !found {
							allFound = false
							t.Logf("missing expected definition: name='%s' line='%d' path='%s'",
								wantDef.Name, wantDef.Range[0], wantDef.Path)
						}
					}
					caseCorrect = allFound
				}
			} else {
				should := tc.ShouldFindDef
				actual := foundDefinitions > 0
				caseCorrect = (should == actual)
			}

			if caseCorrect {
				correctCases++
				t.Logf("âœ“ %s: pass", tc.Name)
			} else {
				t.Logf("âœ— %s: fail", tc.Name)
			}
		})
	}

	accuracy := 0.0
	if totalCases > 0 {
		accuracy = float64(correctCases) / float64(totalCases) * 100
	}
	t.Logf("TestQueryTypeScript summary: total=%d, correct=%d, accuracy=%.2f%%", totalCases, correctCases, accuracy)

}

func TestFindDefinitionsForAllElementsPython(t *testing.T) {
	// è®¾ç½®æµ‹è¯•ç¯å¢ƒ
	env, err := setupTestEnvironment()
	assert.NoError(t, err)
	defer teardownTestEnvironment(t, env)

	// ä½¿ç”¨é¡¹ç›®è‡ªèº«çš„ä»£ç ä½œä¸ºæµ‹è¯•æ•°æ®
	workspacePath, err := filepath.Abs(PythonProjectRootDir) // æŒ‡å‘é¡¹ç›®æ ¹ç›®å½•
	assert.NoError(t, err)

	// åˆå§‹åŒ–å·¥ä½œç©ºé—´æ•°æ®åº“è®°å½•
	err = initWorkspaceModel(env, workspacePath)
	assert.NoError(t, err)

	// åˆ›å»ºç´¢å¼•å™¨å¹¶ç´¢å¼•å·¥ä½œç©ºé—´
	indexer := createTestIndexer(env, &types.VisitPattern{
		ExcludeDirs: append(defaultVisitPattern.ExcludeDirs, "vendor", "test", ".git"),
		IncludeExts: []string{".py"}, // åªç´¢å¼•pythonæ–‡ä»¶
	})

	project := NewTestProject(workspacePath, env.logger)
	fileElements, _, err := ParseProjectFiles(context.Background(), env, project)
	assert.NoError(t, err)

	// å…ˆç´¢å¼•æ‰€æœ‰æ–‡ä»¶åˆ°æ•°æ®åº“
	_, err = indexer.IndexWorkspace(context.Background(), workspacePath)
	assert.NoError(t, err)

	// ç»Ÿè®¡å˜é‡
	var (
		totalElements       = 0
		testedElements      = 0
		foundDefinitions    = 0
		notFoundDefinitions = 0
		queryErrors         = 0
		skippedElements     = 0
		skippedVariables    = 0
	)

	// å®šä¹‰éœ€è¦è·³è¿‡æµ‹è¯•çš„å…ƒç´ ç±»å‹ï¼ˆåŸºäºtypes.ElementTypeçš„å®é™…å€¼ï¼‰
	skipElementTypes := map[string]bool{
		"import":         true, // å¯¼å…¥è¯­å¥é€šå¸¸ä¸éœ€è¦æŸ¥æ‰¾å®šä¹‰
		"import.name":    true, // å¯¼å…¥åç§°
		"import.alias":   true, // å¯¼å…¥åˆ«å
		"import.path":    true, // å¯¼å…¥è·¯å¾„
		"import.source":  true, // å¯¼å…¥æº
		"package":        true, // åŒ…å£°æ˜
		"package.name":   true, // åŒ…å
		"namespace":      true, // å‘½åç©ºé—´
		"namespace.name": true, // å‘½åç©ºé—´åç§°
		"undefined":      true, // æœªå®šä¹‰ç±»å‹
	}

	// è¯¦ç»†çš„å…ƒç´ ç±»å‹ç»Ÿè®¡
	elementTypeStats := make(map[string]int)
	elementTypeSuccessStats := make(map[string]int)

	// éå†æ¯ä¸ªæ–‡ä»¶çš„å…ƒç´ 
	for _, fileElement := range fileElements {
		for _, element := range fileElement.Elements {
			elementType := string(element.GetType())
			totalElements++
			elementTypeStats[elementType]++

			// è·³è¿‡æŸäº›ç±»å‹çš„å…ƒç´ 
			if skipElementTypes[elementType] {
				skippedElements++
				continue
			}

			elementName := element.GetName()
			elementRange := element.GetRange()

			// å¦‚æœå…ƒç´ åç§°ä¸ºç©ºæˆ–è€…èŒƒå›´æ— æ•ˆï¼Œè·³è¿‡
			if elementName == "" || len(elementRange) != 4 {
				skippedElements++
				continue
			}
			if elementType == "variable" && element.GetScope() == types.ScopeFunction {
				skippedVariables++
				continue
			}
			testedElements++

			// å°è¯•æŸ¥æ‰¾è¯¥å…ƒç´ çš„å®šä¹‰
			definitions, err := indexer.QueryDefinitions(context.Background(), &types.QueryDefinitionOptions{
				Workspace: workspacePath,
				StartLine: int(elementRange[0]) + 1,
				EndLine:   int(elementRange[2]) + 1,
				FilePath:  fileElement.Path,
			})

			if err != nil {
				queryErrors++
				continue
			}

			if len(definitions) > 0 {
				foundDefinitions++
				elementTypeSuccessStats[elementType]++
			} else {
				notFoundDefinitions++
			}
		}
	}

	// è®¡ç®—ç»Ÿè®¡æ•°æ®
	successRate := 0.0
	if testedElements > 0 {
		successRate = float64(foundDefinitions) / float64(testedElements) * 100
	}
	// è¾“å‡ºå„ç±»å‹å…ƒç´ çš„ç»Ÿè®¡ä¿¡æ¯
	fmt.Println("\nğŸ“ˆ å„ç±»å‹å…ƒç´ ç»Ÿè®¡:")
	fmt.Println(strings.Repeat("-", 60))
	for elementType, count := range elementTypeStats {
		successCount := elementTypeSuccessStats[elementType]
		rate := 0.0
		if count > 0 {
			rate = float64(successCount) / float64(count) * 100
		}
		if elementType == "variable" {
			fmt.Println("è·³è¿‡çš„å˜é‡æ•°é‡", skippedVariables)
			rate = float64(successCount) / float64(count-skippedVariables) * 100
		}
		fmt.Printf("%-15s: %4d ä¸ª (æˆåŠŸæ‰¾åˆ°å®šä¹‰: %4d, æˆåŠŸç‡: %5.1f%%)\n",
			elementType, count, successCount, rate)
	}
	// æ–­è¨€æ£€æŸ¥ï¼šç¡®ä¿åŸºæœ¬çš„æˆåŠŸç‡
	assert.GreaterOrEqual(t, successRate, 20.0,
		"å…ƒç´ å®šä¹‰æŸ¥æ‰¾çš„æˆåŠŸç‡åº”è¯¥è‡³å°‘è¾¾åˆ°20%")

	// ç¡®ä¿æ²¡æœ‰è¿‡å¤šçš„æŸ¥è¯¢é”™è¯¯
	errorRate := float64(queryErrors) / float64(testedElements) * 100
	assert.LessOrEqual(t, errorRate, 10.0,
		"æŸ¥è¯¢é”™è¯¯ç‡ä¸åº”è¶…è¿‡10%")

	// ç¡®ä¿è‡³å°‘æµ‹è¯•äº†ä¸€å®šæ•°é‡çš„å…ƒç´ 
	assert.GreaterOrEqual(t, testedElements, 50,
		"åº”è¯¥è‡³å°‘æµ‹è¯•50ä¸ªå…ƒç´ ")
}

func TestIterPythonProjectKeys(t *testing.T) {
	// è®¾ç½®æµ‹è¯•ç¯å¢ƒ
	env, err := setupTestEnvironment()
	assert.NoError(t, err)
	defer teardownTestEnvironment(t, env)

	// ä½¿ç”¨fastapié¡¹ç›®ä½œä¸ºæµ‹è¯•æ•°æ®
	workspacePath := "/tmp/projects/python/fastapi"

	// åˆå§‹åŒ–å·¥ä½œç©ºé—´æ•°æ®åº“è®°å½•
	err = initWorkspaceModel(env, workspacePath)
	assert.NoError(t, err)

	// åˆ›å»ºç´¢å¼•å™¨
	indexer := createTestIndexer(env, &types.VisitPattern{
		ExcludeDirs: append(defaultVisitPattern.ExcludeDirs, "vendor", "git"),
		IncludeExts: []string{".py"}, // åªç´¢å¼•Pythonæ–‡ä»¶
	})

	// å…ˆç´¢å¼•å·¥ä½œç©ºé—´ï¼Œç¡®ä¿æœ‰æ•°æ®å¯æŸ¥è¯¢
	fmt.Println("å¼€å§‹ç´¢å¼•fastapié¡¹ç›®...")
	indexResult, err := indexer.IndexWorkspace(context.Background(), workspacePath)
	assert.NoError(t, err)
	fmt.Printf("å·¥ä½œç©ºé—´ç´¢å¼•å®Œæˆï¼Œç´¢å¼•äº† %d ä¸ªæ–‡ä»¶\n", indexResult.TotalFiles)
	fmt.Printf("å¤±è´¥çš„æ–‡ä»¶æ•°: %d\n", indexResult.TotalFailedFiles)

	// è·å–é¡¹ç›®åˆ—è¡¨å’Œå®é™…çš„UUID
	projects := env.workspaceReader.FindProjects(context.Background(), workspacePath, true, &types.VisitPattern{
		ExcludeDirs: append(defaultVisitPattern.ExcludeDirs, "vendor", "git"),
		IncludeExts: []string{".py"},
	})

	fmt.Printf("\nå‘ç°çš„é¡¹ç›®æ•°é‡: %d\n", len(projects))
	for i, project := range projects {
		fmt.Printf("é¡¹ç›® %d: åç§°=%s, è·¯å¾„=%s, UUID=%s\n", i+1, project.Name, project.Path, project.Uuid)

		// æ£€æŸ¥æ¯ä¸ªé¡¹ç›®çš„ç´¢å¼•æ•°æ®
		dataSize := env.storage.Size(context.Background(), project.Uuid, "")
		fmt.Printf("  ç´¢å¼•æ•°æ®å¤§å°: %d\n", dataSize)

		if dataSize > 0 {
			fmt.Printf("  å¼€å§‹è¿­ä»£é¡¹ç›® %s çš„ç´¢å¼•key...\n", project.Uuid)
			iter := env.storage.Iter(context.Background(), project.Uuid)
			defer iter.Close()

			keyCount := 0
			symbolKeys := 0
			pathKeys := 0

			fmt.Printf("  å‰20ä¸ªç´¢å¼•Key:\n")
			for iter.Next() && keyCount < 50 {
				key := iter.Key()
				keyCount++

				if keyCount <= 20 {
					fmt.Printf("    %d. %s\n", keyCount, key)
				}

				// ç»Ÿè®¡keyç±»å‹
				if strings.HasPrefix(key, "@sym:") {
					symbolKeys++
					if symbolKeys <= 5 { // æ˜¾ç¤ºå‰5ä¸ªç¬¦å·keyçš„è¯¦ç»†ä¿¡æ¯
						fmt.Printf("      -> ç¬¦å·Key: %s\n", key)
					}
				} else if strings.HasPrefix(key, "@path:") {
					pathKeys++

					// æ£€æŸ¥ç‰¹å®šè·¯å¾„çš„å†…å®¹
					if strings.Contains(key, "fastapi/routing.py") {
						fmt.Printf("      -> æ‰¾åˆ°ç›®æ ‡æ–‡ä»¶è·¯å¾„Key: %s\n", key)

						// å°è¯•è·å–è¿™ä¸ªè·¯å¾„çš„æ•°æ®
						if data, err := env.storage.Get(context.Background(), project.Uuid, store.ElementPathKey{
							Language: "python",
							Path:     "/tmp/projects/python/fastapi/fastapi/routing.py",
						}); err == nil {
							fmt.Printf("         æ–‡ä»¶æ•°æ®å¤§å°: %d å­—èŠ‚\n", len(data))

							// å°è¯•è§£ææ–‡ä»¶å…ƒç´ è¡¨
							var fileTable codegraphpb.FileElementTable
							if err := proto.Unmarshal(data, &fileTable); err == nil {
								fmt.Printf("         å…ƒç´ æ•°é‡: %d\n", len(fileTable.Elements))
								fmt.Printf("         å¯¼å…¥æ•°é‡: %d\n", len(fileTable.Imports))

								// æ˜¾ç¤ºå‰å‡ ä¸ªå…ƒç´ 
								for j, element := range fileTable.Elements {
									if j < 3 {
										fmt.Printf("           å…ƒç´ %d: åç§°=%s, ç±»å‹=%s, æ˜¯å¦å®šä¹‰=%t\n",
											j+1, element.Name, element.GetElementType(), element.IsDefinition)
									}
								}
							} else {
								fmt.Printf("         è§£ææ–‡ä»¶å…ƒç´ è¡¨å¤±è´¥: %v\n", err)
							}
						} else {
							fmt.Printf("         è·å–æ–‡ä»¶æ•°æ®å¤±è´¥: %v\n", err)
						}
					}
				}
			}

			fmt.Printf("  æ€»Keyæ•°é‡: %d, ç¬¦å·Key: %d, è·¯å¾„Key: %d\n", keyCount, symbolKeys, pathKeys)
			fmt.Println("  " + strings.Repeat("-", 60))
		}
	}

	// æµ‹è¯• QueryDefinitions ä½¿ç”¨æ­£ç¡®çš„é¡¹ç›®ä¿¡æ¯
	if len(projects) > 0 {
		mainProject := projects[0]
		fmt.Printf("\nä½¿ç”¨ä¸»é¡¹ç›®è¿›è¡ŒæŸ¥è¯¢æµ‹è¯•: %s (UUID: %s)\n", mainProject.Name, mainProject.Uuid)

		// æµ‹è¯•ä¸€ä¸ªç®€å•çš„æŸ¥è¯¢
		testFilePath := "/tmp/projects/python/fastapi/fastapi/routing.py"

		// éªŒè¯æ–‡ä»¶æ˜¯å¦å­˜åœ¨å¹¶ä¸”åœ¨é¡¹ç›®èŒƒå›´å†…
		if strings.HasPrefix(testFilePath, mainProject.Path) {
			fmt.Printf("æµ‹è¯•æ–‡ä»¶ %s å±äºé¡¹ç›® %s\n", testFilePath, mainProject.Path)

			// å…ˆæ£€æŸ¥æ–‡ä»¶æ˜¯å¦åœ¨ç´¢å¼•ä¸­
			exists, err := env.storage.Exists(context.Background(), mainProject.Uuid, store.ElementPathKey{
				Language: "python",
				Path:     testFilePath,
			})
			fmt.Printf("æ–‡ä»¶æ˜¯å¦åœ¨ç´¢å¼•ä¸­: %t, é”™è¯¯: %v\n", exists, err)

			// å°è¯•æŸ¥è¯¢å®šä¹‰
			definitions, err := indexer.QueryDefinitions(context.Background(), &types.QueryDefinitionOptions{
				Workspace: workspacePath,
				StartLine: 415,
				EndLine:   419,
				FilePath:  testFilePath,
			})

			if err != nil {
				fmt.Printf("æŸ¥è¯¢é”™è¯¯: %v\n", err)
			} else {
				fmt.Printf("æŸ¥è¯¢æˆåŠŸï¼Œæ‰¾åˆ° %d ä¸ªå®šä¹‰\n", len(definitions))
				for i, def := range definitions {
					fmt.Printf("  å®šä¹‰%d: åç§°=%s, ç±»å‹=%s, è·¯å¾„=%s, èŒƒå›´=%v\n",
						i+1, def.Name, def.Type, def.Path, def.Range)
				}
			}
		} else {
			fmt.Printf("è­¦å‘Š: æµ‹è¯•æ–‡ä»¶ %s ä¸åœ¨é¡¹ç›® %s èŒƒå›´å†…\n", testFilePath, mainProject.Path)
		}
	}
}
